--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
       <header class="header" id="header"></header>
       <main class="main" id="main">
         <div class="survey-container">
+          <!-- header -->
           <div class="header-container white-bg border">
             <div class="title-container poppins-bold">
               <input
@@ -28,25 +29,88 @@
               ></textarea>
             </div>
           </div>
+          <!-- Short answer -->
+          <div class="question-main-container white-bg border">
+            <div class="question-container">
+              <div class="question poppins-normal">
+                <textarea
+                  class="question-text"
+                  placeholder="Question"
+                ></textarea>
+              </div>
+              <div class="answer-type-container poppins-normal">
+                <label>
+                  <select class="answer-type">
+                    <option value="text" selected>Short Answer</option>
+                    <option value="paragraph">Paragraph</option>
+                    <option value="number">Number</option>
+                    <option value="radio">MCQs</option>
+                    <option value="checkbox">Checkbox</option>
+                    <option value="file">File upload</option>
+                  </select>
+                </label>
+              </div>
+            </div>
+            <div class="answer-container">
+              <!-- dynamic module will be loaded based on type of response -->
+              <!-- short answer -->
+              <div class="short-answer poppins-text">
+                <p>Short-Answer text</p>
+              </div>
+              <div class="short-answer-validation">
+                <div class="min-length-container">
+                  <label class="min-length-label poppins-text"> Min: </label>
+                  <input
+                    type="number"
+                    class="validation-box"
+                    placeholder="Min Length"
+                  />
+                </div>
+                <div class="max-length-container">
+                  <label class="max-length-label poppins-text"> Max: </label>
+                  <input
+                    type="number"
+                    class="validation-box"
+                    placeholder="Max Length"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="question-footer">
+              <div class="add-question">
+                <a href="#" title="Add a new question">
+                  <img src="./images/add-button.png" alt="add question" />
+                </a>
+              </div>
+              <div class="delete-icon">
+                <a href="#" title="Delete this question">
+                  <img src="./images/delete.png" alt="delete"
+                /></a>
+              </div>
+              <div class="required-container">
+                <label class="required-toggle-label poppins-text"
+                  >Required
+                  <label class="switch">
+                    <input type="checkbox" class="required-toggle" />
+                    <span class="slider round"></span>
+                  </label>
+                </label>
+              </div>
+            </div>
+          </div>
 
-          <div
-            class="question-main-container white-bg border"
-            id="question-main-container"
-          >
+          <!-- paragraph -->
+          <div class="question-main-container white-bg border">
             <div class="question-container">
               <div class="question poppins-normal">
                 <textarea
                   type="text"
                   class="question-text"
                   placeholder="Question"
-                  id="question-input"
                 ></textarea>
               </div>
               <div class="answer-type-container poppins-normal">
-                <label for="answer-type" class="visually-hidden"
-                  >Answer Type</label
-                >
-                <select class="answer-type" id="answer-type">
+                <select class="answer-type">
                   <option value="text" selected>Short Answer</option>
                   <option value="paragraph">Paragraph</option>
                   <option value="number">Number</option>
@@ -56,31 +120,25 @@
                 </select>
               </div>
             </div>
-            <div class="answer-container" id="answer-container">
+            <div class="answer-container">
               <!-- dynamic module will be loaded based on type of response -->
-              <!-- short answer -->
-              <div class="short-answer poppins-text">
-                <p>Short-Answer text</p>
+              <!-- long answer -->
+              <div class="short-answer long-answer poppins-text">
+                <p>Long-Answer text</p>
               </div>
-              <div class="short-answer-validation">
+              <div class="short-answer-validation long-answer-validation">
                 <div class="min-length-container">
-                  <label for="min-length" class="min-length-label poppins-text"
-                    >Min:
-                  </label>
+                  <label class="min-length-label poppins-text">Min: </label>
                   <input
                     type="number"
-                    id="min-length"
                     class="validation-box"
                     placeholder="Min Length"
                   />
                 </div>
                 <div class="max-length-container">
-                  <label for="max-length" class="max-length-label poppins-text"
-                    >Max:
-                  </label>
+                  <label class="max-length-label poppins-text">Max: </label>
                   <input
                     type="number"
-                    id="max-length"
                     class="validation-box"
                     placeholder="Max Length"
                   />
@@ -88,27 +146,246 @@
               </div>
             </div>
             <div class="question-footer">
-              <div class="add-question" id="add-question">
-                <a href="#"
-                  ><img src="./images/add-button.png" alt="add question"
+              <div class="add-question">
+                <a href="#" title="Add a new question">
+                  <img src="./images/add-button.png" alt="add question" />
+                </a>
+              </div>
+              <div class="delete-icon">
+                <a href="#" title="Delete this question">
+                  <img src="./images/delete.png" alt="delete"
                 /></a>
               </div>
-              <div class="delete-icon" id="delete-icon">
-                <a href="#"><img src="./images/delete.svg" alt="delete" /></a>
-              </div>
               <div class="required-container">
-                <label
-                  for="required-toggle"
-                  class="required-toggle-label poppins-text"
-                  >Required</label
-                >
-                <label class="switch">
-                  <input type="checkbox" id="required-toggle" />
-                  <span class="slider round"></span>
+                <label class="required-toggle-label poppins-text"
+                  >Required
+                  <label class="switch">
+                    <input type="checkbox" class="required-toggle" />
+                    <span class="slider round"></span>
+                  </label>
                 </label>
               </div>
             </div>
           </div>
+
+          <!--  Number -->
+          <div class="question-main-container white-bg border">
+            <div class="question-container">
+              <div class="question poppins-normal">
+                <textarea
+                  type="text"
+                  class="question-text"
+                  placeholder="Question"
+                ></textarea>
+              </div>
+              <div class="answer-type-container poppins-normal">
+                <select class="answer-type">
+                  <option value="text" selected>Short Answer</option>
+                  <option value="paragraph">Paragraph</option>
+                  <option value="number">Number</option>
+                  <option value="radio">MCQs</option>
+                  <option value="checkbox">Checkbox</option>
+                  <option value="file">File upload</option>
+                </select>
+              </div>
+            </div>
+            <div class="answer-container">
+              <!-- dynamic module will be loaded based on type of response -->
+              <!-- long answer -->
+              <div class="short-answer number-answer poppins-text">
+                <p>Numerical value</p>
+              </div>
+              <div class="short-answer-validation number-answer-validation">
+                <div class="min-length-container">
+                  <label class="min-length-label poppins-text">Min: </label>
+                  <input
+                    type="number"
+                    class="validation-box"
+                    placeholder="Min Value"
+                  />
+                </div>
+                <div class="max-length-container">
+                  <label class="max-length-label poppins-text">Max: </label>
+                  <input
+                    type="number"
+                    class="validation-box"
+                    placeholder="Max Value"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="question-footer">
+              <div class="add-question">
+                <a href="#" title="Add a new question">
+                  <img src="./images/add-button.png" alt="add question" />
+                </a>
+              </div>
+              <div class="delete-icon">
+                <a href="#" title="Delete this question">
+                  <img src="./images/delete.png" alt="delete"
+                /></a>
+              </div>
+              <div class="required-container">
+                <label class="required-toggle-label poppins-text"
+                  >Required
+                  <label class="switch">
+                    <input type="checkbox" class="required-toggle" />
+                    <span class="slider round"></span>
+                  </label>
+                </label>
+              </div>
+            </div>
+          </div>
+
+          <!-- MCQs -->
+          <div class="question-main-container white-bg border">
+            <div class="question-container">
+              <div class="question poppins-normal">
+                <textarea
+                  type="text"
+                  class="question-text"
+                  placeholder="Question"
+                ></textarea>
+              </div>
+              <div class="answer-type-container poppins-normal">
+                <select class="answer-type">
+                  <option value="text" selected>Short Answer</option>
+                  <option value="paragraph">Paragraph</option>
+                  <option value="number">Number</option>
+                  <option value="radio">MCQs</option>
+                  <option value="checkbox">Checkbox</option>
+                  <option value="file">File upload</option>
+                </select>
+              </div>
+            </div>
+            <div class="answer-container">
+              <!-- dynamic module will be loaded based on type of response -->
+              <!-- long answer -->
+              <div class="short-answer mcq-answer poppins-text">
+
+                <!-- option to be added -->
+                <div class="mcq-option">
+                  <div class="option-icon">
+                    <img src="./images/option-icon.png" alt="radio" />
+                  </div>
+                  <input
+                    type="text"
+                    class="mcq-option-text mcq-option-property"
+                    placeholder="Option"
+                  />
+                  <div class="delete-icon">
+                    <img src="./images/x-mark.png" alt="x-mark.png" />
+                  </div>
+                </div>
+
+                <!-- add option -->
+                <div class="mcq-add-option mcq-option">
+                  <div class="option-icon">
+                    <img src="./images/option-icon.png" alt="radio" />
+                  </div>
+                  <div class="add-option-text mcq-add-option-property">Add Option</div>
+                </div>
+
+              </div>
+            </div>
+            <div class="question-footer">
+              <div class="add-question">
+                <a href="#" title="Add a new question">
+                  <img src="./images/add-button.png" alt="add question" />
+                </a>
+              </div>
+              <div class="delete-icon">
+                <a href="#" title="Delete this question">
+                  <img src="./images/delete.png" alt="delete"
+                /></a>
+              </div>
+              <div class="required-container">
+                <label class="required-toggle-label poppins-text"
+                  >Required
+                  <label class="switch">
+                    <input type="checkbox" class="required-toggle" />
+                    <span class="slider round"></span>
+                  </label>
+                </label>
+              </div>
+            </div>
+          </div>
+
+          <!-- CheckBox -->
+          <div class="question-main-container white-bg border">
+            <div class="question-container">
+              <div class="question poppins-normal">
+                <textarea
+                  type="text"
+                  class="question-text"
+                  placeholder="Question"
+                ></textarea>
+              </div>
+              <div class="answer-type-container poppins-normal">
+                <select class="answer-type">
+                  <option value="text" selected>Short Answer</option>
+                  <option value="paragraph">Paragraph</option>
+                  <option value="number">Number</option>
+                  <option value="radio">MCQs</option>
+                  <option value="checkbox">Checkbox</option>
+                  <option value="file">File upload</option>
+                </select>
+              </div>
+            </div>
+            <div class="answer-container">
+              <!-- dynamic module will be loaded based on type of response -->
+              <!-- long answer -->
+              <div class="short-answer mcq-answer poppins-text">
+
+                <!-- option to be added -->
+                <div class="mcq-option">
+                  <div class="option-icon checkbox-icon">
+                    <img src="./images/checkbox-icon.png" alt="radio" />
+                  </div>
+                  <input
+                    type="text"
+                    class="mcq-option-text mcq-option-property"
+                    placeholder="Option"
+                  />
+                  <div class="delete-icon">
+                    <img src="./images/x-mark.png" alt="x-mark.png" />
+                  </div>
+                </div>
+
+                <!-- add option -->
+                <div class="mcq-add-option mcq-option">
+                  <div class="option-icon checkbox-icon">
+                    <img src="./images/checkbox-icon.png" alt="checkbox" />
+                  </div>
+                  <div class="add-option-text mcq-add-option-property">Add Option</div>
+                </div>
+
+              </div>
+            </div>
+            <div class="question-footer">
+              <div class="add-question">
+                <a href="#" title="Add a new question">
+                  <img src="./images/add-button.png" alt="add question" />
+                </a>
+              </div>
+              <div class="delete-icon">
+                <a href="#" title="Delete this question">
+                  <img src="./images/delete.png" alt="delete"
+                /></a>
+              </div>
+              <div class="required-container">
+                <label class="required-toggle-label poppins-text"
+                  >Required
+                  <label class="switch">
+                    <input type="checkbox" class="required-toggle" />
+                    <span class="slider round"></span>
+                  </label>
+                </label>
+              </div>
+            </div>
+          </div>
+
+          <!-- File Upload -->
         </div>
       </main>
       <footer class="footer" id="footer"></footer>
