--- a/frontend/create.html
+++ b/frontend/create.html
@@ -75,18 +75,13 @@
                   />
                 </div>
               </div>
-
             </div>
             <div class="question-footer">
               <div class="add-question">
-                <a href="#" title="Add a new question">
-                  <img src="./images/add-button.png" alt="add question" />
-                </a>
+                <img src="./images/add-button.png" alt="add question" />
               </div>
               <div class="delete-icon">
-                <a href="#" title="Delete this question">
-                  <img src="./images/delete.png" alt="delete"
-                /></a>
+                <img src="./images/delete.png" alt="delete" />
               </div>
               <div class="required-container">
                 <label class="required-toggle-label poppins-text"
@@ -145,18 +140,13 @@
                   />
                 </div>
               </div>
-
             </div>
             <div class="question-footer">
               <div class="add-question">
-                <a href="#" title="Add a new question">
-                  <img src="./images/add-button.png" alt="add question" />
-                </a>
+                <img src="./images/add-button.png" alt="add question" />
               </div>
               <div class="delete-icon">
-                <a href="#" title="Delete this question">
-                  <img src="./images/delete.png" alt="delete"
-                /></a>
+                <img src="./images/delete.png" alt="delete" />
               </div>
               <div class="required-container">
                 <label class="required-toggle-label poppins-text"
@@ -215,18 +205,13 @@
                   />
                 </div>
               </div>
-
             </div>
             <div class="question-footer">
               <div class="add-question">
-                <a href="#" title="Add a new question">
-                  <img src="./images/add-button.png" alt="add question" />
-                </a>
+                <img src="./images/add-button.png" alt="add question" />
               </div>
               <div class="delete-icon">
-                <a href="#" title="Delete this question">
-                  <img src="./images/delete.png" alt="delete"
-                /></a>
+                <img src="./images/delete.png" alt="delete" />
               </div>
               <div class="required-container">
                 <label class="required-toggle-label poppins-text"
@@ -293,14 +278,10 @@
             </div>
             <div class="question-footer">
               <div class="add-question">
-                <a href="#" title="Add a new question">
-                  <img src="./images/add-button.png" alt="add question" />
-                </a>
+                <img src="./images/add-button.png" alt="add question" />
               </div>
               <div class="delete-icon">
-                <a href="#" title="Delete this question">
-                  <img src="./images/delete.png" alt="delete"
-                /></a>
+                <img src="./images/delete.png" alt="delete" />
               </div>
               <div class="required-container">
                 <label class="required-toggle-label poppins-text"
@@ -367,14 +348,10 @@
             </div>
             <div class="question-footer">
               <div class="add-question">
-                <a href="#" title="Add a new question">
-                  <img src="./images/add-button.png" alt="add question" />
-                </a>
+                <img src="./images/add-button.png" alt="add question" />
               </div>
               <div class="delete-icon">
-                <a href="#" title="Delete this question">
-                  <img src="./images/delete.png" alt="delete"
-                /></a>
+                <img src="./images/delete.png" alt="delete" />
               </div>
               <div class="required-container">
                 <label class="required-toggle-label poppins-text"
@@ -457,35 +434,26 @@
               <div class="file-validation-container">
                 <div class="file-size-container">
                   <label class="file-size-label poppins-text">Max Size: </label>
-                    <input
+                  <input
                     type="number"
                     class="validation-box file-size-validation-box"
                     value="5"
-                    />
+                  />
                 </div>
               </div>
-
             </div>
             <div class="question-footer">
               <div class="add-question">
-                <a href="#" title="Add a new question">
-                  <img src="./images/add-button.png" alt="add question" />
-                </a>
+                <img src="./images/add-button.png" alt="add question" />
               </div>
               <div class="delete-icon">
-                <a href="#" title="Delete this question">
-                  <img src="./images/delete.png" alt="delete"
-                /></a>
+                <img src="./images/delete.png" alt="delete" />
               </div>
               <div class="required-container">
                 <label class="required-toggle-label poppins-text"
                   >Required
                   <label class="switch">
-                    <input
-                      type="checkbox"
-                      class="required-toggle"
-                      value="required"
-                    />
+                    <input type="checkbox" class="required-toggle" />
                     <span class="slider round"></span>
                   </label>
                 </label>
