--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,4 +9,5 @@
   <body></body>
   <script src="./js/basic-init.js" type="module"></script>
   <script src="./js/script.js" type="module"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </html>
