--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey Master</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body></body>
   <script src="./js/script.js" type="module"></script>
