--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body></body>
-  <script src="./js/script.js" type="module"></script>
+  <script src="./js/routing.js" type="module"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </html>
